format css and release version 3

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>LEARNING GIT</h1>
-    <h2>version w</h2>
+    <h2>version 1</h2>
+    <h2>version 3</h2>
 </body>
 </html>
